exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 2990,
      "unmappedBytes": 2309,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "<unmapped>": 2309
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 2309/2990 bytes (77.22%)"
    }
  ]
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 717,
      "unmappedBytes": 36,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "<unmapped>": 36
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 36/717 bytes (5.02%)"
    }
  ]
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 717,
      "unmappedBytes": 36,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 717,
      "unmappedBytes": 36,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "<unmapped>": 36
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 36/717 bytes (5.02%)"
    }
  ]
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map.js",
      "totalBytes": 682,
      "unmappedBytes": 1,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "<unmapped>": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/no-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/682 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 2990,
      "unmappedBytes": 2309,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "<unmapped>": 2309
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 2309/2990 bytes (77.22%)"
    }
  ]
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 717,
      "unmappedBytes": 36,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "<unmapped>": 36
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
<unmapped>\t36\r
\r
<unmapped>\t2309\r
node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97
`
